adicionando card de tags de tecnologias + esboço do footer

--- a/index.html
+++ b/index.html
@@ -58,9 +58,28 @@
       </div>
     </div>
   </div>
- 
+
+  <div class="container3">
+    <div class="card">
+      <span class="title">Stacks</span>
+      <div class="card__tags">
+        <ul class="tag">
+          <li class="tag__name">Javascript</li>
+          <li class="tag__name">Vue.js</li>
+          <li class="tag__name">React.js</li>
+          <li class="tag__name">Css</li>
+          <li class="tag__name">html</li>
+          <li class="tag__name">AWS</li>
+          <li class="tag__name">Docker</li>
+          <li class="tag__name">Node.js</li>
+          <li class="tag__name">MySQL</li> 
+        </ul>
+      </div>
+    </div>
+  </div>
+
   </main>
-  <footer></footer>
+  <footer>&copy;Ana Alice Honório</footer>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>
     var typed = new Typed(".multiText", {
