--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     crossorigin="anonymous"
   />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
   <div class="container">
@@ -55,7 +55,7 @@
       </div>
       <div class="cols">
         <div class="imgBox">
-          <img src="./images/imagem-background.png" alt="Imagem de uma menina, cabelos castanhos curtos e ondulados segurando um tablet" />
+          <img src="./assets/images/imagem-background.png" alt="Imagem de uma menina, cabelos castanhos curtos e ondulados segurando um tablet" />
         </div>
       </div>
     </div>
