--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/images/ico.png" />
     <title>Portfólio da Alice</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,29 +63,13 @@
   </div>
 
   <aside id="container2">
-    <div class="card">
-      <span class="title">Stacks</span>
-      <div class="card__tags">
-        <ul class="tag">
-          <li class="tag__name">Javascript</li>
-          <li class="tag__name">Typescript</li> 
-          <li class="tag__name">Vue.js</li>
-          <li class="tag__name">React.js</li>
-          <li class="tag__name">Css</li>
-          <li class="tag__name">html</li>
-          <li class="tag__name">AWS</li>
-          <li class="tag__name">Docker</li>
-          <li class="tag__name">Node.js</li>
-          <li class="tag__name">MySQL</li> 
-          <li class="tag__name">PostgreSQL</li> 
-          <li class="tag__name">MongoDB</li>
-        </ul>
-      </div>
-    </div>
+  
   </aside>
 
   </main>
-  <footer>&copy;Ana Alice Honório</footer>
+  <footer>
+    <p>&copy;Ana Alice Honório</p>
+  </footer>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>
     var typed = new Typed(".multiText", {
